--- a/settings.env
+++ b/settings.env
@@ -21,7 +21,7 @@ EMAIL_USE_TLS=False
 
 MQTT_USERNAME=admin
 MQTT_PASSWORD=cruzrojaadmin
-MQTT_EMAIL=webmaster@cruzroja.ucsd.edu
+MQTT_EMAIL=webmaster@emstrack.org
 MQTT_CLIENTID=mqttclient
 
 MQTT_BROKER_HOST=mqtt
@@ -34,3 +34,7 @@ MQTT_BROKER_TEST_HOST=mqtt-test
 
 MAP_PROVIDER=google
 MAP_PROVIDER_TOKEN=CH4NG3M3
+
+SMS_KEY=
+SMS_PASSWORD=
+SMS_FROM=
