--- a/settings.env
+++ b/settings.env
@@ -35,6 +35,7 @@ MQTT_BROKER_TEST_HOST=mqtt-test
 MAP_PROVIDER=google
 MAP_PROVIDER_TOKEN=CH4NG3M3
 
+SMS_PROVIDER=nexmo
 SMS_KEY=
-SMS_PASSWORD=
+SMS_PASS=
 SMS_FROM=
