--- a/settings.env
+++ b/settings.env
@@ -19,6 +19,10 @@ EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 EMAIL_USE_TLS=False
 
+GUEST_USERNAME=guest
+GUEST_PASSWORD=cruzrojaguest
+GUEST_EMAIL=webmaster@emstrack.org
+
 MQTT_USERNAME=admin
 MQTT_PASSWORD=cruzrojaadmin
 MQTT_EMAIL=webmaster@emstrack.org
