--- a/nginx/conf.d/https.conf
+++ b/nginx/conf.d/https.conf
@@ -43,6 +43,30 @@ server {
         alias /var/www/html/static/;
     }
 
+    location /dashboard/ {
+        try_files $uri @dashboard;
+    }
+
+    location @dashboard {
+        proxy_pass http://dashboard:8080;
+
+        proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        # added blob: to csp or else plotly dash map doesn't load 
+        add_header Content-Security-Policy "default-src * data: 'unsafe-eval' 'unsafe-inline' blob:" always;
+        # add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        # enable strict transport security only if you understand the implications
+    }
+
     location / {
         try_files $uri @emstrack;
     }
