--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,10 +38,10 @@ services:
 
   emstrack:
     build:
-      context: https://github.com/EMSTrack/EMSTrack-Django.git #devel
+      context: https://github.com/EMSTrack/EMSTrack-Django.git
     env_file:
       - settings.env
-      # - local.env
+      #- local.env
     container_name: emstrack
     volumes:
       - static:/app/deploy/static
@@ -72,11 +72,11 @@ services:
 
   dashboard:
     build:
-      context: https://github.com/EMSTrack/EMSTrack-Dashboard.git#main
+      context: https://github.com/EMSTrack/EMSTrack-Dashboard.git
     container_name: dashboard
     env_file:
       - settings.env
-      # - local.env # uncomment when running
+      #- local.env # uncomment when running
     ports:
       - 8080:8080 # internal:external
     networks:
