--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,18 @@ services:
     networks:
       - app-network
 
+  dashboard:
+    build:
+      context: https://github.com/EMSTrack/EMSTrack-Dashboard.git
+    container_name: dashboard
+    env_file:
+      - settings.env
+      #- local.env # uncomment when running
+    ports:
+      - 8080:8080 # internal:external
+    networks:
+      - app-network
+
   nginx:
     image: nginx:mainline-alpine
     container_name: nginx
