--- a/mosquitto-test/conf.d/default.conf
+++ b/mosquitto-test/conf.d/default.conf
@@ -1,18 +1,38 @@
 allow_anonymous false
 
-auth_plugin /usr/lib/auth-plug.so
+# auth_plugin /usr/lib/auth-plug.so
+auth_plugin /mosquitto/go-auth.so
 
-auth_opt_backends files,http
-auth_opt_superusers admin
+auth_opt_log_level debug
+auth_opt_log_dest stdout
 
-auth_opt_http_ip emstrack
+auth_opt_backends files, http
+# auth_opt_superusers admin
+# auth_opt_disable_superuser true
+auth_opt_files_register user, acl
+auth_opt_http_register user, superuser, acl
+
+# auth_opt_http_ip emstrack
 auth_opt_http_port 8001
-auth_opt_http_hostname emstrack
+auth_opt_http_host emstrack
+# auth_opt_http_hostname emstrack
 auth_opt_http_getuser_uri /en/auth/mqtt/login/
 auth_opt_http_superuser_uri /en/auth/mqtt/superuser/
 auth_opt_http_aclcheck_uri /en/auth/mqtt/acl/
 
-auth_opt_password_file /mosquitto/data/passwd
+auth_opt_http_response_mode text
+auth_opt_http_params_mode form
+
+auth_opt_hasher pbkdf2
+auth_opt_hasher_salt_size 12           # salt bytes length
+auth_opt_hasher_iterations 180000      # number of iterations
+auth_opt_hasher_keylen 32              # key length
+auth_opt_hasher_algorithm sha256       # hashing algorithm, either sha512 (default) or sha256
+auth_opt_hasher_salt-encoding base64   # salt encoding, either base64 (default) or utf-8
+
+# auth_opt_password_file /mosquitto/data/passwd
+auth_opt_files_password_path /mosquitto/data/passwd
+auth_opt_files_acl_path /mosquitto/data/acl
 
 listener 1883
 
