--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -3,10 +3,10 @@
 # A full description of the configuration file is at
 # /usr/share/doc/mosquitto/examples/mosquitto.conf.example
 
-# pid_file /var/run/mosquitto.pid
+pid_file /mosquitto/var/mosquitto.pid
 
 persistence true
-persistence_location /mosquitto/data/
+persistence_location /mosquitto/var/
 
 #log_type error
 #log_type warning
