--- a/mosquitto-test/mosquitto.conf
+++ b/mosquitto-test/mosquitto.conf
@@ -3,7 +3,7 @@
 # A full description of the configuration file is at
 # /usr/share/doc/mosquitto/examples/mosquitto.conf.example
 
-pid_file /var/run/mosquitto.pid
+pid_file /mosquitto/var/mosquitto.pid
 
 persistence true
 persistence_location /mosquitto/data/
@@ -21,4 +21,4 @@ log_timestamp true
 #log_dest file /mosquitto/log/mosquitto.log
 log_dest stdout
 
-include_dir /mosquitto/config/conf.d
+include_dir /etc/mosquitto/conf.d
